--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "language-wake",
-  "version": "0.3.0",
+  "version": "0.0.0",
   "author": "SiFive",
   "description": "wake language support for Atom",
   "license": "Apache-2.0",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sifive/atom-language-wake.git"
+    "url": "https://github.com/sifive/atom-language-wake.git"
   },
   "bugs": {
     "url": "https://github.com/sifive/atom-language-wake/issues"
